fix: #45 이슈 대응 및 자잘한 버그 수정